--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"shortid": "^2.2.6"
 	},
 	"engines": {
-		"node": "~8.11"
+		"node": "8.11"
 	},
 	"repository": {
 		"url": "https://gomix.com/#!/project/welcome-project"
